security/secure-pod-example/approved-web-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: approved-web-pod
  labels:
    approved: "true"
spec:
  containers:
  - name: web-pod
    image: radial/busyboxplus:curl
    command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
