security/secure-pod-example/unapproved-web-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: unapproved-web-pod
spec:
  containers:
  - name: web-pod
    image: radial/busyboxplus:curl
    command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
